# BrainAlignNet

./: .gitignore  README.md  juliapkg.json  pyproject.toml
demo_notebook/: demo_network.ipynb
scripts/: benchmark.py  benchmark_utils.py  network_utils.py  register.py  train.py
scripts/data_preparation/: data_utils.py  euler_register.py  evaluate.py  label_centroids.py  sample.py  warp.py  warp_rfp.py  warp_roi.py
scripts/gfp_control/: data_utils.py  run_gfp_control.py
