[project]
name = "BrainAlignNet"
version = "0.1.0"
description = "BrainAlignNet is a deep neural network that registers neurons in the deforming head of freely-moving C. elegans."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["deepreg", "euler-gpu", "juliacall>=0.9.24", "simpleitk>=2.4.1"]

[tool.uv.sources]
euler-gpu = { git = "https://github.com/lycantrope/euler_gpu" }
deepreg = { git = "https://github.com/flavell-lab/DeepReg" }
